# histosnet

./: .gitignore  LICENSE.md  README.md  environment.yml  pyproject.toml  requirements.txt
data/monuseg/: patient_information.csv
data/quip/: gdc_manifest.2020-09-29.txt  wsi_quality_control_result.txt
notebooks/: 1. Mask R-CNN.ipynb  1. U-Net.ipynb  2. Cell Calssifier.ipynb  2. Cell Classifier.ipynb  3. Find and classify cells.ipynb  3. Predicting Survival.ipynb  4. Evaluation.ipynb  4. Investigating Survival.ipynb  5. Investigating Survival.ipynb  U-Net.ipynb  augmented_dataset.py  augmented_sequence.py  config.py  dataset.py  extract_features.py  figures.ipynb  indexing.py  mamoography.ipynb  mask-rcnn.ipynb  monuseg_utils.py  predict.py  tils-project.ipynb  utils.py  weighted_loss_unet.py
